Accuracy Score for BoW and TFIDF

--- a/Tweet Sentiment Analysis.ipynb
+++ b/Tweet Sentiment Analysis.ipynb
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "652ea89d",
+   "id": "a84f3d4f",
    "metadata": {},
    "source": [
     "# Text Stemming"
@@ -923,7 +923,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6a1f1bb7",
+   "id": "92e6d801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "29266f5f",
+   "id": "23856b15",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "2c156127",
+   "id": "ed44fa9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +972,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d7a79225",
+   "id": "c90cad74",
    "metadata": {
     "scrolled": true
    },
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "ede00f2f",
+   "id": "e5bf521c",
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "31e3e555",
+   "id": "9f88f237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "721acf29",
+   "id": "88efbb97",
    "metadata": {},
    "outputs": [
     {
@@ -1072,7 +1072,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1f73dc90",
+   "id": "c57a6a7f",
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "bdba3852",
+   "id": "ed79725d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "0dc803cd",
+   "id": "eb408f7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "f2bb35e0",
+   "id": "e6481442",
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "df9d7bc3",
+   "id": "78b38662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f9f22c45",
+   "id": "252c1c1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1164,7 +1164,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "8790b272",
+   "id": "145cd058",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86fd1cb6",
+   "id": "71f5da17",
    "metadata": {},
    "source": [
     "---"
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e96afb23",
+   "id": "9f083b80",
    "metadata": {},
    "source": [
     "# Implementing Machine Learning Models"
@@ -1203,24 +1203,336 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41b7a75f",
+   "execution_count": 65,
+   "id": "1d4db5de",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Split the dataset\n",
+    "# Train dataset\n",
+    "X_train = df[\"review\"][0:40_000]\n",
+    "y_train = df[\"sentiment\"][0:40_000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "a3dba027",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test dataset\n",
+    "X_test = df[\"review\"][40_000:]\n",
+    "y_test = df[\"sentiment\"][40_000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "5b5213cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(40000,) (40000,)\n",
+      "(10000,) (10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape, y_train.shape)\n",
+    "print(X_test.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a38686a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bags of Words model\n",
+    "# It is used to convert text documents to numerical vectors of bag of words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8c81a12a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BOW_cv_train: (40000, 6183315)\n",
+      "BOW_cv_test: (10000, 6183315)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count vectorizer for bag of words\n",
+    "cv = CountVectorizer(min_df=0, max_df=1, binary=False,\n",
+    "                 ngram_range=(1,3))\n",
+    "# transformed train reviews\n",
+    "cv_train_reviews = cv.fit_transform(X_train)\n",
+    "# transformed test reviews\n",
+    "cv_test_reviews = cv.transform(X_test)\n",
+    "\n",
+    "print(\"BOW_cv_train:\", cv_train_reviews.shape)\n",
+    "print(\"BOW_cv_test:\", cv_test_reviews.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f6fe38bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Term Frequency-Inverse Document Frequency model (TFIDF)\n",
+    "# It is used to convert text documents to matrix of tfidf features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "e704bda0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
+    "from sklearn.naive_bayes import MultinomialNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "90610c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tfidf_train: (40000, 6183315)\n",
+      "Tfidf_test: (10000, 6183315)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tfidf vectorizer\n",
+    "tv = TfidfVectorizer(min_df=0, max_df=1, use_idf=True, ngram_range=(1,3))\n",
+    "# transformed train reviews\n",
+    "tv_train_reviews = tv.fit_transform(X_train)\n",
+    "# transformed test reviews\n",
+    "tv_test_reviews = tv.transform(X_test)\n",
+    "print(\"Tfidf_train:\", tv_train_reviews.shape)\n",
+    "print(\"Tfidf_test:\", tv_test_reviews.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "b97e669f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "scipy.sparse.csr.csr_matrix"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(tv_train_reviews)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "5454d49a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<45x6183315 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 1731 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tv_test_reviews[0:45]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "52e7aee4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LogisticRegression(C=1, max_iter=500, random_state=42)\n",
+      "LogisticRegression(C=1, max_iter=500, random_state=42)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train the Model\n",
+    "lr = LogisticRegression(penalty=\"l2\",max_iter=500, C=1,\n",
+    "                       random_state=42)\n",
+    "# Fitting the model for Bag of Words\n",
+    "lr_bow = lr.fit(cv_train_reviews, y_train)\n",
+    "print(lr_bow)\n",
+    "# Fitting the model for tfidf features\n",
+    "lr_tfidf = lr.fit(tv_train_reviews, y_train)\n",
+    "print(lr_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "1aaba6c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['positive' 'positive' 'positive' ... 'positive' 'negative' 'negative']\n",
+      "['positive' 'positive' 'positive' ... 'positive' 'negative' 'negative']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predicting the model for bag of words train dataset\n",
+    "lr_bow_predict_train = lr.predict(cv_train_reviews)\n",
+    "print(lr_bow_predict_train)\n",
+    "\n",
+    "# Predicting the model for tfidf features\n",
+    "lr_tfidf_predict_train = lr.predict(tv_train_reviews)\n",
+    "print(lr_tfidf_predict_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "246a1c8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "6a98af51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr_bow_score_train:  0.99625\n",
+      "lr_tfidf_score_train:  0.99625\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy score for bag of words train dataset\n",
+    "lr_bow_score_train = accuracy_score(y_train, lr_bow_predict_train)\n",
+    "print(\"lr_bow_score_train: \", lr_bow_score_train)\n",
+    "\n",
+    "# Accuracy score for tfidf features\n",
+    "lr_tfidf_score_train = accuracy_score(y_train, lr_tfidf_predict_train)\n",
+    "print(\"lr_tfidf_score_train: \", lr_tfidf_score_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "48644645",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['negative' 'negative' 'negative' ... 'negative' 'negative' 'negative']\n",
+      "['negative' 'negative' 'negative' ... 'negative' 'negative' 'negative']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predicting the model for bag of words test dataset\n",
+    "lr_bow_predict_test = lr.predict(cv_test_reviews)\n",
+    "print(lr_bow_predict_test)\n",
+    "\n",
+    "# Predicting the model for tfidf features\n",
+    "lr_tfidf_predict_test = lr.predict(tv_test_reviews)\n",
+    "print(lr_tfidf_predict_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "ea38a407",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lr_bow_score_test:  0.7676\n",
+      "lr_tfidf_score_test:  0.7659\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Accuracy score for bag of words test dataset\n",
+    "lr_bow_score_test = accuracy_score(y_test, lr_bow_predict_test)\n",
+    "print(\"lr_bow_score_test: \", lr_bow_score_test)\n",
+    "\n",
+    "# Accuracy score for tfidf features\n",
+    "lr_tfidf_score_test = accuracy_score(y_test, lr_tfidf_predict_test)\n",
+    "print(\"lr_tfidf_score_test: \", lr_tfidf_score_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1138725a",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "162cea45",
+   "metadata": {},
+   "source": [
+    "# Classification report for bag of words"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2be6d952",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8ebb0cf",
+   "id": "82dbb0cf",
    "metadata": {},
    "outputs": [],
    "source": []
